<resources>
    <string name="app_name">Hello2</string>
    <string name="button">shuru</string>
    <string name="temp_1">input the temperture</string>
    <string name="out">shuchu</string>
    <string name="iuput_number">input the number</string>
    <string name="lable_add1">+1 point</string>
    <string name="lable_add2">+2 points</string>
    <string name="lable_add3">+3 points</string>
    <string name="btn_reset_lable1">Reset</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="rmb_hint">Input Rmb</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_opencfg_label">config</string>
    <string name="btn_save_label">Save</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">OpenList</string>
    <string name="research_lable">research</string>
    <string name="iuput_lable">input</string>
    <string name="hint_input">input the key words</string>
    <string name="hello">Hello Kitty</string>
    <string name="btn">Button</string>
    <string name="btn_reset">Reset</string>
    <string name="TeamA">TeamA</string>
    <string name="show">0</string>
    <string name="btn_dollar">Dollar</string>
    <string name="btn_euro">Euro</string>
    <string name="btn_won">Won</string>
    <string name="btn_config">config</string>
    <string name="btn_save">save</string>
    <string name="menu_setting">Setting</string>
</resources>
